assigned endpoints all functional, pending test suite